--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href=".//assets/css/styles.css">
+    <link rel="stylesheet" href=".//assets/css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./assets/css/styles.css">
 
     <title> Fahim Yusuf </title>
 </head>
