--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                 <div class="work__card mix mobile">
                     <img src="./assets/img/work5.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">App movil</h3>
+                    <h3 class="work__title">App Mobile</h3>
 
                     <a href="#" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
