--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                     </div>
 
                     <p class="about__description">
-                        The traveler who wants to travel everything by own hard work. I'm always looking forward to learning new things for the development of my personal as well as professional life. 
-                         I have a special interest in programming and problem-solving. 
+                        A dreamer, who wants to fulfill his dream on his own. I'm always looking forward to learning new things for the development of my personal as well as professional life. 
+                         I have a special interest in Machine Learning. 
                         Currently, I'm doing a Bachelor of Science in Computer Science & Engineering.
                     </p>
 
