--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                     <p class="about__description">
                         <b>A dreamer, who wants to fulfill his dream on his own.</b> I'm always looking forward to learning new things for the development of my personal as well as professional life. 
-                         I have a special interest in Machine Learning. 
+                         I have a special interest in Machine Learning.<br> 
                         Currently, I'm doing a Bachelor of Science in Computer Science & Engineering.
                     </p>
 
