--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                 <i class='bx bxs-badge-check' ></i>
 
                                 <div>
-                                    <h3 class="skills_name">Applied Mathematics</h3>
+                                    <h3 class="skills_name">Concepts of computer science and software engineering</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
                                 <i class='bx bxs-badge-check' ></i>
 
                                 <div>
-                                    <h3 class="skills_name">Neural Network Architectures</h3>
+                                    <h3 class="skills_name">Data analysis and feature engineering</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
@@ -177,7 +177,7 @@
                                 <i class='bx bxs-badge-check' ></i>
 
                                 <div>
-                                    <h3 class="skills_name">Data Modeling and Evaluation</h3>
+                                    <h3 class="skills_name">Metrics involved in ML</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                                 <i class='bx bxs-badge-check' ></i>
 
                                 <div>
-                                    <h3 class="skills_name">Natural Language Processing</h3>
+                                    <h3 class="skills_name">ML algorithm selection, and cross validation</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
@@ -197,19 +197,19 @@
                                 <i class='bx bxs-badge-check' ></i>
 
                                 <div>
-                                    <h3 class="skills_name">Audio and video Processing</h3>
+                                    <h3 class="skills_name">Math and Statistics</h3>
                                     <span class="skills__level">Basic</span>
                                 </div>
                             </div>
 
-                            <div class="skills__data">
+                            <!-- <div class="skills__data">
                                 <i class='bx bxs-badge-check' ></i>
 
                                 <div>
                                     <h3 class="skills_name">Graph Visualization</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
 
             <div class="services__container container grid">
                 <div class="services__card">
-                    <h3 class="services__title">Product <br> Designer</h3>
+                    <h3 class="services__title">Data <br> Analysis</h3>
 
                     <span class="services__button">
                         See More <i class='bx bx-right-arrow-alt services__icon' ></i>
@@ -288,54 +288,54 @@
                         <div class="services__modal-content">
                             <i class='bx bx-x services__modal-close' ></i>
 
-                            <h3 class="services__modal-title">Product Designer</h3>
-                            <p class="services__modal-description">
+                            <h3 class="services__modal-title">Data Analysis</h3>
+                            <!-- <p class="services__modal-description">
                                 Service with more than 3 years of experience. 
                                 Providing quality work to clients and companies.
-                            </p>
+                            </p> -->
 
                             <ul class="services__modal-list">
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I develop the user interface.
+                                        Descriptive Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        Web page development.
+                                        Diagnostic Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I create ux element interactions.
+                                        Predictive Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I position your company brand.
+                                        Prescriptive Data.
                                     </p>
                                 </li>
 
-                                <li class="services__modal-item">
+                                <!-- <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
                                         Design and mockups of products for companies.
                                     </p>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
                 </div>
 
                 <div class="services__card">
-                    <h3 class="services__title">Ui/Ux <br> Designer</h3>
+                    <h3 class="services__title">Data <br> Handling</h3>
 
                     <span class="services__button">
                         See More <i class='bx bx-right-arrow-alt services__icon' ></i>
@@ -345,35 +345,35 @@
                         <div class="services__modal-content">
                             <i class='bx bx-x services__modal-close' ></i>
 
-                            <h3 class="services__modal-title">Ui/Ux Designer</h3>
+                            <h3 class="services__modal-title">Data Handling</h3>
                             <p class="services__modal-description">
-                                Service with more than 3 years of experience. 
-                                Providing quality work to clients and companies.
+                                I am good at libraries such as Numpy, Pandas, Matplotlib and SciPy, etc.
+                                 in a Jupyter notebook environment and Google Colaboratory.
                             </p>
 
                             <ul class="services__modal-list">
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I develop the user interface.
+                                        Processing Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        Web page development.
+                                        Cleaning Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I create ux element interactions.
+                                        Visualizing Structured Data.
                                     </p>
                                 </li>
 
-                                <li class="services__modal-item">
+                                <!-- <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
                                         I position your company brand.
@@ -385,14 +385,14 @@
                                     <p class="services__modal-info">
                                         Design and mockups of products for companies.
                                     </p>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
                 </div>
 
                 <div class="services__card">
-                    <h3 class="services__title">Visual <br> Designer</h3>
+                    <h3 class="services__title">Data <br> Visualization</h3>
 
                     <span class="services__button">
                         See More <i class='bx bx-right-arrow-alt services__icon' ></i>
@@ -402,47 +402,47 @@
                         <div class="services__modal-content">
                             <i class='bx bx-x services__modal-close' ></i>
 
-                            <h3 class="services__modal-title">Visual Designer</h3>
-                            <p class="services__modal-description">
+                            <h3 class="services__modal-title">Data Visualization</h3>
+                            <!-- <p class="services__modal-description">
                                 Service with more than 3 years of experience. 
                                 Providing quality work to clients and companies.
-                            </p>
+                            </p> -->
 
                             <ul class="services__modal-list">
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I develop the user interface.
+                                        Descriptive Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        Web page development.
+                                        Diagnostic Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I create ux element interactions.
+                                        Predict Data.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
-                                        I position your company brand.
+                                        Graph Visualization the Data.
                                     </p>
                                 </li>
 
-                                <li class="services__modal-item">
+                                <!-- <li class="services__modal-item">
                                     <i class='bx bx-check services__modal-icon' ></i>
                                     <p class="services__modal-info">
                                         Design and mockups of products for companies.
                                     </p>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -459,16 +459,16 @@
                 <span class="work__item active-work" data-filter='all'>All</span>
                 <span class="work__item" data-filter='.web'>Web</span>
                 <span class="work__item" data-filter='.mobile'>Mobile</span>
-                <span class="work__item" data-filter='.design'>Design</span>
+                <span class="work__item" data-filter='.desktop'>Desktop</span>
             </div>
 
             <div class="work_container container grid">
                 <div class="work__card mix web">
                     <img src="./assets/img/work1.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Web design</h3>
+                    <h3 class="work__title">Portfolio Design</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://fahim06.github.io/myPortfolio/" target="_blank" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
@@ -476,19 +476,19 @@
                 <div class="work__card mix mobile">
                     <img src="./assets/img/work2.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">App mobile</h3>
+                    <h3 class="work__title">Calculator</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://github.com/fahim06/Calculator_App" target="_blank" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
 
-                <div class="work__card mix design">
+                <div class="work__card mix desktop">
                     <img src="./assets/img/work3.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Brand design</h3>
+                    <h3 class="work__title">Dictionary using C</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://github.com/fahim06/Dictionary" target="_blank" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
@@ -496,9 +496,9 @@
                 <div class="work__card mix web">
                     <img src="./assets/img/work4.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Web design</h3>
+                    <h3 class="work__title">The Story Keeper</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="books.fahimyusuf.com" target="_blank" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
@@ -506,9 +506,19 @@
                 <div class="work__card mix mobile">
                     <img src="./assets/img/work5.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">App Mobile</h3>
+                    <h3 class="work__title">BMI Calculator</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="https://github.com/fahim06/BMI_Calculator" target="_blank" class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix desktop">
+                    <img src="./assets/img/work6.jpg" alt="" class="work__img">
+
+                    <h3 class="work__title">Students Information using Java</h3>
+
+                    <a href="https://github.com/fahim06/StudentApp01" target="_blank" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
@@ -516,7 +526,7 @@
         </section>
 
         <!--=============== TESTIMONIALS ===============-->
-        <section class="testimonial section">
+        <!-- <section class="testimonial section">
             <span class="section__subtitle">My clients say</span>
             <h2 class="section__title">Testimonial</h2>
 
@@ -555,7 +565,7 @@
 
                 <div class="swiper-pagination"></div>
             </div>
-        </section>
+        </section> -->
 
         <!--=============== CONTACT ===============-->
         <section class="contact section" id="contact">
@@ -580,7 +590,7 @@
                         <div class="contact__card">
                             <i class='bx bxl-whatsapp contact__card-icon' ></i>
                             <h3 class="contact__card-title">Whatsapp</h3>
-                            <span class="contact__card-data">01717223614</span>
+                            <span class="contact__card-data">+8801717223614</span>
 
                             <a href="https://api.whatsapp.com/send?phone=+8801717223614&text=Hello, more information!" target="_blank" class="contact__button">
                                 Write me <i class='bx bxs-right-arrow-circle contact__button-icon' ></i>
