--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Fahim</a>
+            <a href="#" img src="./assets/img/logo.png" alt="" class="nav__logo">Fahim</a>
 
             <div class="nav__menu">
                 <ul class="nav__list">
@@ -74,7 +74,7 @@
                     <h3 class="home__education">Engineer</h3>
 
                     <div class="home__buttons">
-                        <a download="" href=".//assets/pdf/Fahim-Cv.pdf" class="button button--ghost">
+                        <a download="" href="./assets/pdf/Fahim-Cv.pdf" class="button button--ghost">
                             Download CV
                         </a>
                         <a href="#about" class="button">About me</a>
@@ -469,7 +469,7 @@
                     <h3 class="work__title">Portfolio Design</h3>
 
                     <a href="https://fahim06.github.io/myPortfolio/" target="_blank" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                        Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
 
@@ -479,7 +479,7 @@
                     <h3 class="work__title">Calculator</h3>
 
                     <a href="https://github.com/fahim06/Calculator_App" target="_blank" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                        Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
 
@@ -489,7 +489,7 @@
                     <h3 class="work__title">Dictionary using C</h3>
 
                     <a href="https://github.com/fahim06/Dictionary" target="_blank" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                        Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
 
@@ -499,7 +499,7 @@
                     <h3 class="work__title">The Story Keeper</h3>
 
                     <a href="books.fahimyusuf.com" target="_blank" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                        Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
 
@@ -509,7 +509,7 @@
                     <h3 class="work__title">BMI Calculator</h3>
 
                     <a href="https://github.com/fahim06/BMI_Calculator" target="_blank" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                        Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
 
@@ -519,7 +519,7 @@
                     <h3 class="work__title">Students Information using Java</h3>
 
                     <a href="https://github.com/fahim06/StudentApp01" target="_blank" class="work__button">
-                        Demo <i class='bx bx-right-arrow-alt work__icon' ></i>
+                        Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
             </div>
@@ -609,7 +609,7 @@
                     </div>
                 </div>
 
-                <div class="contact__container">
+                <!-- <div class="contact__container">
                     <h3 class="contact__title">Write me your project</h3>
 
                     <form action="" class="contact__form">
@@ -630,7 +630,7 @@
 
                         <button class="button">Send Message</button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
