Site link added

--- a/index.html
+++ b/index.html
@@ -470,9 +470,16 @@
 
                     <h3 class="work__title">Portfolio Design</h3>
 
+                    
+                    <a href="https://cv.fahimyusuf.com" target="_blank" class="work__button">
+                        Site Link <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                    &nbsp; <br>
+
                     <a href="https://fahim06.github.io/myPortfolio/" target="_blank" class="work__button">
                         Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
+
                 </div>
 
                 <div class="work__card mix mobile">
@@ -486,13 +493,20 @@
                 </div>
 
                 <div class="work__card mix desktop">
-                    <img src="./assets/img/work3.jpg" alt="" class="work__img">
+                    <img src="./assets/img/work3.jpg" alt="" class="work__img" >
 
                     <h3 class="work__title">Dictionary using C</h3>
+
+                    
+                    <a href="https://dictionary.fahimyusuf.com" target="_blank" class="work__button">
+                        Site Link <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                    &nbsp; <br>
 
                     <a href="https://github.com/fahim06/Dictionary" target="_blank" class="work__button">
                         Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
+
                 </div>
 
                 <div class="work__card mix web">
@@ -501,6 +515,11 @@
                     <h3 class="work__title">The Story Keeper</h3>
 
                     <a href="books.fahimyusuf.com" target="_blank" class="work__button">
+                        Site Link <i class='bx bx-right-arrow-alt work__icon' ></i>
+                    </a>
+                    &nbsp; <br>
+
+                    <a href="https://github.com/Swoad-11/The-Story-Keeper" target="_blank" class="work__button">
                         Git Link <i class='bx bx-right-arrow-alt work__icon' ></i>
                     </a>
                 </div>
